@@ -1,0 +1,8 @@
+# Droopi logging configuration file.
+# $Id$
+#
+droopi.buffers=debug
+droopi.channels=debug
+droopi.orb=debug
+droopi.protocols.echo=debug
+droopi.refs=debug
